-
Bug
-
Resolution: Done
-
Not Evaluated
-
Qt Creator 2.7.1
-
None
-
Windows Vista 64 bit
- Start Creator with enabled Qnx plugin and a BlackBerry device set up.
- Go to "Tools" -> "Options..." -> "Devices" -> "Devices" and select the BlackBerry device.
- Delete the Debug token outside of Creator.
- Click "Upload".
A window will appear and disappear right away. Then a message box will show up:
This shows two bugs:
- A window should not appear and disappear in less than a second. Either show it correctly or don't show it at all.
- The text of the message box is wrong: If you write a colon, write something after it.