Qnx: Check the debug token path when uploading to device

The debug token could be (re)moved outside of QtCreator.
The current patch:
- Checks the debug token path in the device wizard configuration
before uploading into device.
- Adds a new ReturnStatus if the file does not exist (for further use).

Task-number: QTCREATORBUG-9103

Change-Id: I5f48014072e4e807cd637a91f76e80c74195fee6
Reviewed-by: Rafael Roquetto <rafael.roquetto@kdab.com>